--- a/app/views/games/games_leaderboard.html.erb
+++ b/app/views/games/games_leaderboard.html.erb
@@ -1,6 +1,8 @@
+<% content_for :body_class, "leaderboard-index-page leaderboard-index-page--mobile" %>
+
 <div class='my-balance'>
   <div class='redeem'>
-    <i class="fa fa-list leaderboader-head__icon"></i>
+    <%= embedded_svg('svgs/leaderboard.svg', :class => 'leaderboard-svg') %>
     <div class="redeem__copy">
       <p class="redeemCredits">Leaderboards</p>
       <p class="redeemCredits__desc">View the top contenders</p>
