--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -13,7 +13,7 @@
             <div class="game__info">
                 <h1 class="game__title"><%= g.name %></h1>
                 <span class="credits">Earn Credits</span>
-                <% if g.slug == "flappy-pilot" ||  g.slug == "fall-down" || g.slug == "traffic" %>
+                <% if g.slug == "flappy-pilot" ||  g.slug == "fall-down" || g.slug == "traffic" || g.slug == "tap-color" || g.slug == "2048" %>
                     <img class="game__leaderboard" src="/assets/leaderboard_button.png">
                 <% end %>
             </div>
