--- a/app/views/games/leaderboard.html.erb
+++ b/app/views/games/leaderboard.html.erb
@@ -13,7 +13,7 @@
 </section>
 <% if @game.slug == "tap-color" %>
   <div class="leaderboard__cat-wrapper">
-    <div class="leaderboard__cat">
+    <div class="leaderboard__cat leaderboard__cat--3">
       <h2 class="cat-title tab-toggle ga-tab--alltime active" data-tab-cat=".leaderboard--all-time">Easy</h2>
       <h2 class="cat-title tab-toggle ga-tab--weekly" data-tab-cat=".leaderboard--weekly">Medium</h2>
       <h2 class="cat-title tab-toggle ga-tab--weekly" data-tab-cat=".leaderboard--weekly">Hard</h2>
