--- a/app/assets/stylesheets/custom_mobile.css.scss
+++ b/app/assets/stylesheets/custom_mobile.css.scss
@@ -40,6 +40,7 @@ body {
         }
     }
 
+    &.leaderboard-index-page--mobile,
     &.mobile-games-page {
         padding-bottom: 50px;
     }
@@ -757,6 +758,12 @@ p {
 }
 
 .mobile-header{
+    .gameplay-page--2048 &,
+    .intermediate--2048 & {
+        .credits {
+            top: -10px;
+        }
+    }
     position: relative;
     top:-10px;
     width:100%;
@@ -787,8 +794,6 @@ p {
         .credits{
             color:$credits-red;
             font-size: 14px;
-            // font-weight: 200;
-            // letter-spacing: 0.25px;
             position:relative;
             top:-15px;
         }
