--- a/app/views/games/index_mobile.html.erb
+++ b/app/views/games/index_mobile.html.erb
@@ -4,7 +4,7 @@
         <% @games.each do | g | %>
             <%= link_to game_path(g) do %>
                 <div class="game-wrapper game--<%= g.slug %> js-game--<%= g.slug %>" data-game-id="<%= g.id %>">
-                    <% if g.slug == "flappy-pilot" ||  g.slug == "fall-down" || g.slug == "traffic" %>
+                    <% if g.slug == "flappy-pilot" ||  g.slug == "fall-down" || g.slug == "traffic" || g.slug == "tap-color" || g.slug == "2048" %>
                         <img class="game__leaderboard" src="/assets/leaderboard_button.png">
                     <% end %>
                 <%= image_tag(g.image, :class=>'game-image') %>
