--- a/app/assets/stylesheets/leaderboard.css.scss
+++ b/app/assets/stylesheets/leaderboard.css.scss
@@ -42,13 +42,6 @@ $falldown-font: #FEE2C7;
     .leaderboard__cat {
             border: 2px solid $flappy-font;
     }
-    .leaderboard__cat--3 {
-        .cat-title {
-            width: 33%;
-            padding: 5px 0;
-            float: left;
-        }
-    }
     .leaderboard-row {
         color: $flappy-font;
     }
@@ -145,6 +138,14 @@ $falldown-font: #FEE2C7;
         text-align: center;
         border: 2px solid $orange;
         border-radius: 2px;
+}
+.leaderboard__cat--3 {
+    .cat-title {
+        width: 33%;
+        padding: 5px 0;
+        float: left;
+        display: block;
+    }
 }
 .cat-title {
         font-size: 14px;
