--- a/app/views/games/leaderboard.html.erb
+++ b/app/views/games/leaderboard.html.erb
@@ -14,9 +14,9 @@
 <% if @game.slug == "tap-color" %>
     <div class="leaderboard__cat-wrapper">
         <div class="leaderboard__cat leaderboard__cat--3">
-            <h2 class="cat-title js-tab-toggle active" data-tab-cat=".leaderboard--all-time">Easy</h2>
-            <h2 class="cat-title js-tab-toggle" data-tab-cat=".leaderboard--weekly">Medium</h2>
-            <h2 class="cat-title js-tab-toggle" data-tab-cat=".leaderboard--weekly">Hard</h2>
+            <h2 class="tab-control__title js-tab--difficulty active" data-tab-cat=".js-leaderboard--easy">Easy</h2>
+            <h2 class="tab-control__title js-tab--difficulty" data-tab-cat=".js-leaderboard--medium">Medium</h2>
+            <h2 class="tab-control__title js-tab--difficulty" data-tab-cat=".js-leaderboard--hard">Hard</h2>
         </div>
     </div>
 <% end %>
@@ -28,15 +28,16 @@
 
 <div class="leaderboard__cat-wrapper">
     <div class="leaderboard__cat">
-        <h2 class="cat-title js-tab-toggle ga-tab--alltime active" data-tab-cat=".leaderboard--all-time">All-Time</h2>
-        <h2 class="cat-title js-tab-toggle ga-tab--weekly" data-tab-cat=".leaderboard--weekly">Weekly</h2>
+        <h2 class="tab-control__title js-tab--cat ga-tab--alltime active" data-tab-cat=".leaderboard--all-time">All-Time</h2>
+        <h2 class="tab-control__title js-tab--cat ga-tab--weekly" data-tab-cat=".leaderboard--weekly">Weekly</h2>
     </div>
 </div>
 
 <% if @game.slug == 'tap-color' %>
- <h2>EASY </h2>
+ <div class="js-leaderboard--easy js-leaderboard-diff leaderboard-diff active">
+    <h2 class="leaderboard-diff__title">EASY </h2>
     <section class="game-leaderboard">
-        <div class="tab-section js-tab-section">
+        <div class="tab-section js-tab-section leaderboard leaderboard--all-time active">
             <% get_alltime_leaderboard({game_id: @game.id,version:1} ).each.with_index(1) do | record, rank | %>
                 <div class="leaderboard-row leadboard--easy leadboard--easy-alltime">
                     <span class="leaderboard-rank"><%= rank %></span>
@@ -46,7 +47,7 @@
             <% end %>
         </div>
 
-        <div class="tab-section js-tab-section leaderboard leaderboard--weekly leadboard--easy leadboard--easy-weekly hidden">
+        <div class="tab-section js-tab-section leaderboard leaderboard--weekly">
             <% get_weekly_leaderboard({game_id: @game.id,version:1} ).each.with_index(1) do | record, rank | %>
                 <div class="leaderboard-row">
                     <span class="leaderboard-rank"><%= rank %></span>
@@ -56,9 +57,12 @@
             <% end %>
         </div>
     </section>
- <h2>MEDIUM </h2>
+</div><!-- /.leaderboard-diff -->
+
+ <div class="js-leaderboard--medium js-leaderboard-diff leaderboard-diff">
+    <h2 class="leaderboard-diff__title">MEDIUM </h2>
     <section class="game-leaderboard">
-        <div class="tab-section js-tab-section leaderboard leaderboard--all-time">
+        <div class="tab-section js-tab-section leaderboard leaderboard--all-time active">
             <% get_alltime_leaderboard({game_id: @game.id,version:2} ).each.with_index(1) do | record, rank | %>
                 <div class="leaderboard-row ">
                     <span class="leaderboard-rank"><%= rank %></span>
@@ -68,7 +72,7 @@
             <% end %>
         </div>
 
-        <div class="tab-section js-tab-section leaderboard leaderboard--weekly hidden">
+        <div class="tab-section js-tab-section leaderboard leaderboard--weekly">
             <% get_weekly_leaderboard({game_id: @game.id,version:2} ).each.with_index(1) do | record, rank | %>
                 <div class="leaderboard-row">
                     <span class="leaderboard-rank"><%= rank %></span>
@@ -78,9 +82,12 @@
             <% end %>
         </div>
     </section>
-     <h2>HARD </h2>
+</div><!-- /.leaderboard-diff -->
+
+<div class="js-leaderboard--hard js-leaderboard-diff leaderboard-diff">
+    <h2 class="leaderboard-diff__title">HARD </h2>
     <section class="game-leaderboard">
-        <div class="tab-section js-tab-section leaderboard leaderboard--all-time">
+        <div class="tab-section js-tab-section leaderboard leaderboard--all-time active">
             <% get_alltime_leaderboard({game_id: @game.id,version:3} ).each.with_index(1) do | record, rank | %>
                 <div class="leaderboard-row">
                     <span class="leaderboard-rank"><%= rank %></span>
@@ -90,7 +97,7 @@
             <% end %>
         </div>
 
-        <div class="tab-section js-tab-section leaderboard leaderboard--weekly hidden">
+        <div class="tab-section js-tab-section leaderboard leaderboard--weekly">
             <% get_weekly_leaderboard({game_id: @game.id,version:3} ).each.with_index(1) do | record, rank | %>
                 <div class="leaderboard-row">
                     <span class="leaderboard-rank"><%= rank %></span>
@@ -100,9 +107,10 @@
             <% end %>
         </div>
     </section>
-<% else %>
+</div><!-- /.leaderboard-diff -->
+<% else %> <!--  ********************* Normal Leaderboard *********************  -->
     <section class="game-leaderboard">
-        <div class="tab-section js-tab-section leaderboard leaderboard--all-time">
+        <div class="tab-section js-tab-section leaderboard leaderboard--all-time active">
             <% get_alltime_leaderboard({game_id: @game.id} ).each.with_index(1) do | record, rank | %>
                 <div class="leaderboard-row">
                     <span class="leaderboard-rank"><%= rank %></span>
@@ -112,7 +120,7 @@
             <% end %>
         </div>
 
-        <div class="tab-section js-tab-section leaderboard leaderboard--weekly hidden">
+        <div class="tab-section js-tab-section leaderboard leaderboard--weekly">
             <% get_weekly_leaderboard({game_id: @game.id} ).each.with_index(1) do | record, rank | %>
                 <div class="leaderboard-row">
                     <span class="leaderboard-rank"><%= rank %></span>
