changed copy on luckee rank toolip

--- a/app/assets/stylesheets/profiles.css.scss
+++ b/app/assets/stylesheets/profiles.css.scss
@@ -30,6 +30,8 @@
     margin-bottom: 0;
 }
 .profile__avatar {
+    height: 100px;
+    width: 100px;
     text-align: center;
     background-color: white;
     text-align: center;
