--- a/app/assets/stylesheets/custom_mobile.css.scss
+++ b/app/assets/stylesheets/custom_mobile.css.scss
@@ -41,6 +41,7 @@ body {
     }
 
     &.leaderboard-index-page--mobile,
+    &.leaderboard-page--mobile,
     &.mobile-games-page {
         padding-bottom: 50px;
     }
