fixing user profile breakdown chart

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -46,7 +46,7 @@
                     <span class="key-color js-key-color"></span> Flappy Pilot
                 </li>
                 <li class="legend__key">
-                    <span class="key-color js-key-color"></span> Sorcerer Game
+                    <span class="key-color js-key-color"></span> Sorcerer
                 </li>
                 <li class="legend__key">
                     <span class="key-color js-key-color"></span> Tap the Color
@@ -72,6 +72,7 @@
                 legendRectSize = 18,
                 legendSpacing = 4;
 
+                debugger;
 
             var canvas = d3.select(".profile__bottom")
                         .append('svg')
